--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext {
+        dokkaVersion = '0.9.17'
+        kotlin_version = '1.3.11'
+    }
     repositories {
         google()
         jcenter()
@@ -11,6 +14,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //firebase
         classpath 'com.google.gms:google-services:4.0.1'
+        //plugin for dokka, generation of documentation
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
