--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'kotlin-kapt'
+//firebase
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -45,11 +48,25 @@ dependencies {
     //viewmodel injection
     implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation "android.arch.lifecycle:viewmodel:1.1.0"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
     //testing
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
+    //room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    //kapt "android.arch.persistence.room:compiler:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    // Anko
+    implementation "org.jetbrains.anko:anko-common:0.10.8"
+    //dagger
+    implementation "com.google.dagger:dagger:2.16"
+    implementation "com.google.dagger:dagger-android-support:2.16"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
+    //binding
+    annotationProcessor "com.android.databinding:compiler:3.1.4"
 }
 
-//firebase
-apply plugin: 'com.google.gms.google-services'
+
