--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //binding
+    annotationProcessor "com.android.databinding:compiler:3.1.4"
     //firebase
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-core:16.0.4'
@@ -55,7 +57,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.1.0'
     //room
     implementation "android.arch.persistence.room:runtime:1.1.1"
-    //kapt "android.arch.persistence.room:compiler:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
     // Anko
     implementation "org.jetbrains.anko:anko-common:0.10.8"
@@ -65,8 +67,6 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-compiler:2.16"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
-    //binding
-    annotationProcessor "com.android.databinding:compiler:3.1.4"
 }
 
 
